// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AudioPlayer Renders correctly when not playing 1`] = `
Array [
  <button
    className="track__button track__button--play"
    disabled={true}
    onClick={[Function]}
    type="button"
  />,
  <div
    className="track__status"
  >
    <audio />
  </div>,
]
`;

exports[`AudioPlayer Renders correctly when playing 1`] = `
Array [
  <button
    className="track__button track__button--pause"
    disabled={false}
    onClick={[Function]}
    type="button"
  />,
  <div
    className="track__status"
  >
    <audio />
  </div>,
]
`;
